# DogeDB

./: README.md
Doge-Database/: CMakeLists.txt  main.cpp
Doge-Database/SeanParent/: CMakeLists.txt  main.cpp
Doge-Database/SeanParent_edited/: CMakeLists.txt  main.cpp  typeerased_original.h
Doge-Database/include/: reference_wrapper.h  typeerased_v1-2022-08-28.h  typeerased_v1.h  typeerased_v1_1.h  typeerased_v2.h  typeerased_v3.h
Doge-Database/old/: main-2022-08-28.cpp  mytest.cpp
Doge-Database/recursion_problem/: CMakeLists.txt  main.cpp  typeerased_original.h
Doge-Database/reference_wrapper_test/: CMakeLists.txt  reference_wrapper_test.cpp
Doge-Database/std_forward/: CMakeLists.txt  std_forward_test.cpp
